2012-03-13  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Only plot a symbol in the legend, if that is the requested type
	* plotchart.tcl: Implement the -box/-axesbox option for table charts

2011-11-27  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.man: Add documentation for removefromlegend and several options
	* plotchart.tcl: Add method removefromlegend
	* plotaxis.tcl: Add method to remove an entry from the legend (proposed and
                 implemented by Frank CG)
	* plotpriv.tcl: Corrected placement of labels for piechart

2011-08-19  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotpriv.tcl: Restore centring of the piechart (if no options are given)

2011-08-18  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotpriv.tcl: Added reference information for circle and 3D margins (solving
	                title problems

2011-08-17  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotpriv.tcl: Fix problem with right axis and -reference option for piecharts
	* plotaxis.tcl: Added dash pattern to ticklines (patch by "Frank")

2011-08-11  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotpriv.tcl: Fix problem with masks if multiple plots are used in one canvas
	* plotpriv.tcl: Fix problem with titles - each plot box now gets its own title
	* plotpriv.tcl: Update procedure for margins for circular plots (piecharts and polar plots)
	* plotconfig.tcl: Change default colour for the axes in polar plots
	                  Note: ***slight incompatibility***
	                  Reason: the black lines and circles were too pronounced

2011-07-26  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Correct error in handling -format option for non-linear axes
	* *.tcl: Many changes wrt supporting multiple plots in one canvas

2011-01-25  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* *.tcl: Merging my version with that of Torsten